<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我的郑大</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="my_zzu">我的郑大</string>
    <string name="about">关于我</string>
    <string name="share">分享</string>
    <string name="action_back">后退</string>
    <string name="zzu">郑州大学</string>
    <string name="i_am_freshman">今年我大一</string>
    <string name="function">今年我大一界面右上角功能按钮</string>
    <string name="student_freshman">大一</string>
    <string name="student_sophomore">大二</string>
    <string name="student_junior">大三</string>
    <string name="student_senior">大四</string>
    <string name="school">学校</string>
    <string name="common">常用</string>
    <string name="login">登陆</string>
    <string name="logout">退出</string>
    <string name="input_student_id">请输入学号</string>
    <string name="input_jw_password">教务处登陆密码</string>
    <string name="admission_card_number">准考证号</string>
    <string name="con1">考生号</string>
    <string name="con3">学号</string>
    <string name="con5">姓名</string>
    <string name="con7">性别</string>
    <string name="con9">院系名称</string>
    <string name="con11">专业名称</string>
    <string name="con13">班级名称</string>
    <string name="con15">备注</string>
    <string name="me">me</string>
    <string name="my_information">我的信息</string>
    <string name="main_bottom_bg">主界面下方按钮背景</string>
    <string name="main_bottom_button_first">主界面下方第一个按钮</string>
    <string name="main_bottom_button_second">主界面下方第二个按钮</string>
    <string name="main_bottom_button_third">主界面下方第三个按钮</string>
    <string name="main_bottom_button_forth">主界面下方第四个按钮</string>
    <string name="out_button_bg">退出按钮背景图</string>
    <string name="start_activity">进入详情</string>
    <!-- 大一新生begin -->
    <string name="zzu_introduction">郑州大学介绍</string>
    <string name="zzu_intruction_content0">\t\t----国家“211工程”重点建设高校</string>
    <string name="zzu_intruction_content1">\t\t国家“中西部高校提升综合实力计划”入选高校 河南省与教育部共建高校</string>
    <string name="zzu_intruction_content2">\t\t郑州大学由原郑州大学、郑州工业大学、河南医科大学于2000年7月10日合并组建而成。原郑州大学创建于1956年，是新中国成立后国家创办的第一所综合性大学；原郑州工业大学成立于1963年，是原化工部直属的重点院校； 原河南医科大学成立于1928年，是以医学为主的省属重点高等医科院校。经过长期建设和发展，学校已成为一所涵盖理学、工学、医学、文学、历史学、哲学、法学、经济学、管理学、教育学、农学、艺术学12大学科门类的综合性大学，是国家“211工程”重点建设高校，是国家“中西部高校提升综合实力计划”入选高校，是河南省人民政府与国家教育部共建高校。</string>
    <string name="zzu_intruction_content3">\t\t郑州大学办学资源充足。校本部包括4个校区，总占地面积6493亩，其中坐落在郑州高新技术产业开发区的主校区占地面积4845亩，总建筑面积165万平方米。</string>
    <string name="zzu_intruction_content4">\t\t郑州大学办学规模宏大，师资力量雄厚。校本部现有全日制普通本科生5.2万余人，各类研究生1.5万余人，外国留学生1400余人；在岗教职工近6000人，其中院士24人（专职6人，双聘18人），教授721人，国家“杰出青年基金”获得者5人、国家“百千万人才工程”人选19人、国家“千人计划”人选4人、省“百人计划”人选6人，副教授1600余人，具有博士学位的教师1700余人。</string>
    <string name="zzu_intruction_content5">\t\t郑州大学人才培养体系完备。设有46个院（系），9个附属医院，107个本科专业，55个一级学科硕士点，237个二级学科硕士点；21个一级学科博士点，124个二级学科博士点。另有1个专业博士学位点，19种专业硕士学位点，23个博士后科研流动站。有国家级精品课程14门，国家级特色专业14个，国家级实验教学示范中心3个，国家级人才培养模式创新实验区2个，国家级工程实践教育中心7个、国家级大学生创新性实验计划项目、创新创业训练计划项目210项，国家级教学团队4个，国家级教学名师5人，国家级双语教学示范课程2门。学校现有1个国家理科基础科学研究和教学人才培养基地，1个国家大学生文化素质教育基地，1个教育部高校辅导员培训和研修基地，1个国侨办华文教育基地，6个国家级重点（培育）学科,37个国家临床重点专科建设项目，214个省级重点学科，4个学科（领域）ESI排名进入全球前1％。</string>
    <string name="zzu_intruction_content6">\t\t郑州大学科研基础坚实。有各级、各类科研机构330多个。其中，1个国家工程研究中心，1个国家技术研究推广中心，1个国家级国际联合研究中心，1个国家化工安全工程技术中心，1个国家药物安全性评价研究中心，2个国家药品临床研究基地，3个教育部重点实验室，2个教育部工程研究中心；1个省部共建高校人文社科重点研究基地；1个国家体育总局体育文化发展研究中心体育文化研究基地；1个国家知识产权培训基地；6个河南省协同创新中心；省级重点实验室、工程技术研究中心、工程实验室、国际联合实验室、人文社会科学重点研究基地，省高校重点学科开放实验室、工程技术研究中心、国家重点实验室培育基地等104个，省部级以上重点科研机构达到125个，具有较强的基础研究、应用研究和科技开发能力。</string>
    <string name="zzu_intruction_content7">\t\t郑州大学基础设施完善，办学条件优越。是全国绿化委员会授予的“造林绿化400佳单位”。学校图书馆建筑面积8.4万平方米，馆藏图书797.1万余册。拥有1个出版社；公开出版发行学术期刊14种。学校还合作兴办有西亚斯国际学院、体育学院。</string>
    <string name="zzu_intruction_content8">\t\t郑州大学学术气氛活跃，对外交流广泛。先后与北京大学、清华大学、中国科学院等20余家国内高校、科研院所建立了合作关系，与美国、英国、法国、日本、俄罗斯、加拿大、澳大利亚、韩国、哈萨克斯坦、白俄罗斯、芬兰、乌克兰等国家和我国的香港、台湾等40多个国家和地区的170余所知名高校建立了校际合作关系。学校坚持以人为本，注重学生素质全面发展，为社会培养了一大批合格人才，在党建和思想政治工作、教学、科研、医疗、管理、学生工作和后勤服务等方面获得多项省级以上荣誉称号。</string>
    <string name="zzu_intruction_content9">\t\t郑州大学的建设和发展得到了中央和地方各级领导的亲切关怀和大力支持。党和国家领导人李克强、刘云山、刘延东、吴邦国、贾庆林、李长春、贺国强、李岚清、罗干、陈至立、顾秀莲、成思危、张思卿、徐匡迪、张榕明等分别到校视察指导工作，教育部、省委、省政府主要领导多次来学校调研或现场办公。在上级领导的关心和支持下，学校在人才培养、师资队伍建设、学科建设、科学研究、校园建设、党的建设和思想政治工作等方面都取得了长足进步，呈现出良好发展势头。郑州大学将坚持以“一省一校”为主线，以协同创新为抓手，加快学校转型发展与内涵建设步伐，全面提高教育教学质量和办学水平，力争在本世纪中叶把郑州大学建设成为国内一流、国际知名、具有区域示范作用的高水平大学，为全面建设小康社会、实现中原崛起做出新的更大的贡献。</string>
    <string name="zzu_intruction_content10">\t\t(注：以上内容来自郑州大学校园官网，数据截止到2014年9月)</string>
    <string name="historical_evolution">历史沿革</string>
    <string name="historical_evolution_content0">\t\t新的郑州大学成立于2000年7月10日，由原郑州大学、郑州工业大学和河南医科大学合并组建而成，是一所理、工、医、文、史、哲、法、经、管等学科门类齐全的综合性大学。</string>
    <string name="historical_evolution_content1">\t\t原郑州大学创建于1956年，是新中国成立后国家创办的第一所综合性大学。1991年黄河大学并入。1996年11月通过国家“211工程”部门预审，1996年6月国家发展计划委员会正式批复，将郑州大学列入国家“211工程”项目院校进行重点建设。合校前已基本形成了文理渗透、理工兼容，文、理、工、财经、政法等学科门类齐全的综合性大学。</string>
    <string name="historical_evolution_content2">\t\t原郑州工业大学成立于1963年，是原化工部直属的重点院校。原名郑州工学院，1996年4月更名为郑州工业大学。经过37年的建设和发展，合校前已成为以工为主，文、理、经多学科协调发展的高等工科学校。</string>
    <string name="historical_evolution_content3">\t\t原河南医科大学1928年在开封成立，原名河南大学医科，后改名河南大学医学院，1952年从河南大学分出，更名为河南医学院，1957年迁至郑州，1984年更名为河南医科大学。合校前河南医科大学是以医学为主的省属重点高等医科院校。</string>
    <string name="zzu_map">新区平面图</string>
    <string name="open_with_browser">用浏览器打开</string>
    <string name="open_baidu_map">打开百度地图</string>
    <string name="school_environment">校园风景</string>
    <string name="freshman_register">新生报道</string>
    <string name="divide_into_class_information">分班信息查询</string>
    <string name="stuinfo">郑州大学学生信息</string>
    <string name="myinfo">我的信息</string>
    <string name="photo">入学日期</string>
    <string name="stuinfo_student_id">学号</string>
    <string name="stuinfo_name">姓名</string>
    <string name="stuinfo_english_name">英文姓名</string>
    <string name="stuinfo_sex">性别</string>
    <string name="stuinfo_birthday">出生日期</string>
    <string name="stuinfo_mation">民族</string>
    <string name="stuinfo_health">健康状况</string>
    <string name="stuinfo_foreign_language">外语语种</string>
    <string name="stuinfo_class">所属班号</string>
    <string name="stuinfo_from">学生来源</string>
    <string name="stuinfo_senior">毕业高中</string>
    <string name="stuinfo_origin">籍贯</string>
    <string name="stuinfo_place">来源地区</string>
    <string name="stuinfo_zipcode">家庭邮编</string>
    <string name="stuinfo_home_phone">家庭电话</string>
    <string name="stuinfo_idcard_number">身份证号</string>
    <string name="stuinfo_type">入学方式</string>
    <string name="stuinfo_time_in">入学日期</string>

    <!-- 大一新生end -->
    <!-- 学校begin -->
    <string name="郑大新闻">郑大新闻</string>
    <!-- 学校end -->
    <!-- 常用begin -->
    <string name="out_button_bg2">退出按钮背景图</string>
    <!-- 常用end -->
    <!-- 设置begin -->
    <string name="out_button_bg3">退出按钮背景图</string>
    <!-- 设置end -->

    <string name="bad_score">悲催的成绩单</string>
    <string name="zzu_term_1">第1学期</string>
    <string name="zzu_term_2">第2学期</string>
    <string name="zzu_term_3">第3学期</string>
    <string name="zzu_term_4">第4学期</string>
    <string name="zzu_term_5">第5学期</string>
    <string name="zzu_term_6">第6学期</string>
    <string name="zzu_term_7">第7学期</string>
    <string name="zzu_term_8">第8学期</string>
    <string name="news">新闻</string>
    <string name="zzu_me">我的信息</string>
    <string name="zzu_class">课程</string>
    <string name="zzu_type">修习类别</string>
    <string name="zzu_credit">学分</string>
    <string name="zzu_score">成绩</string>
    <string name="zzu_gpa">绩点</string>
    <string name="school_calendar">学校校历</string>
    <string name="zzu_index">学校首页</string>
    <string name="school_zzu_jw">系统教务首页</string>
    <string name="school_zzu_ie">信息工程学院首页</string>
    <string name="service_index">校园网服务主页</string>
    <string name="how_to_regist">校园网学生用户注册流程</string>
    <string name="how_to_change_ip">更改IP方法</string>
    <string name="ips">新校区学生宿舍IP分配总表</string>
    <string name="internet_regist">校园网注册</string>
    <string name="ruijie_download">认证客户端锐捷下载</string>
    <string name="mac_sezrch">mac地址查询方法</string>
    <string name="wlan_intruction">校园网无线网络使用说明</string>
    <string name="service">校园网相关</string>
    <string name="trouble_faq">网络故障FAQ查询</string>
    <string name="service_commopn_phone">网络中心常用服务电话</string>
    <string name="news_notice">网上新闻与公告</string>
    <string name="zzu_notice0">郑州大学网上公告</string>
    <string name="zzu_notice1">学校办公通知</string>
    <string name="zzu_notice2">普通公告栏</string>
    <string name="zzu_notice3">招聘.招生.海报</string>
    <string name="zzu_notice5">学术动态</string>
    <string name="zzu_news0">郑州大学网上新闻</string>
    <string name="zzu_news1">图片新闻</string>
    <string name="zzu_news2">综合新闻</string>
    <string name="zzu_news3">新闻.教学科研</string>
    <string name="zzu_news4">新闻.学生信息</string>
    <string name="zzu_news5">新闻.学术动态</string>
    <string name="zzu_news6">新闻.院系风采</string>
    <string name="zzu_news8">新闻.媒体郑大</string>
    <string name="zzu_news9">新闻.外事信息</string>
    <string name="job">校园宣讲会</string>
    <string name="roompre">图书馆座位预约</string>
    <!-- about begin -->
    <string name="app_about1">\t\t你好，我叫“我的郑大”，我还不到一岁，诞生在一个叫做郑州大学信息工程学院的地方，我的诞生就是一场意外。</string>
    <string name="app_about2">\t\t我的存在主要是帮助大一的学弟学妹了解一些学校的信息，帮助大二大三学长学姐很方便的了解一些学校的新闻，查询学期的成绩，帮助大四的学长学姐查看校园就业服务中心有哪些宣讲会，希望他们可以早日找到心仪的工作。</string>
    <string name="app_about3">\t\t我这里不能聊天，不能交友，毕竟玩不过某讯摇一摇什么的，现在这里找到你心仪的妹子是不太可能的，不过你可以勾搭我的哥哥，把我造出来的那个哥哥，去“关于我”中可以查看呦。</string>
    <string name="app_about4">\t\t我现在还没有那么有趣，谁让我的哥哥那么没有幽默感呢，虽然他自己一直很努力的想成为段子手，然而并没有什么用。你有什么好的建议吗，可以帮助我让我变得更有趣吗？对了，哥哥说了，只有让我开源(https://github.com/renyuzhuo/Score)，我才能长大变的更好，更多的人才可以帮助我长大，那么问题来了，你知道什么叫做开源吗?同样，进入到我哥哥的那里也可以找到我的真身和分身(源码)，你帮帮我让我快快长大好不好:)</string>
    <string name="app_about5">\t\t我有时会犯错误，你可以告诉我的哥哥，他会教训我我才会变的更好的，啦啦啦。对于帮助到我的我会在这里感谢你们的。在这里署上你的名字或ID，不过没有RMB，嘻嘻</string>
    <string name="app_about6">\t\t感谢我的家人，感谢我的老师，感谢我爱的人，感谢我的朋友们，谢谢！！！</string>
    <string name="app_about7">\t\t最后，向郑大小助手致敬，向郑大小丁丁致敬。</string>
    <string name="app_about8">\t\t2015.11</string>
    <string name="me_about1">\t\t你好，我是郑州大学的一个普通学生，这个APP一直想写，然后花了好久构思，一周时间编码，写出来的。</string>
    <string name="me_about2">我的联系方式：</string>
    <string name="me_about3">\t\tqq：97206415</string>
    <string name="me_about4">\t\temail：renyuzhuo@foxmail.com</string>
    <string name="me_about5">\t\t微信公众平台：我叫任玉琢(i_am_renyuzhuo)</string>
    <string name="me_about6">\t\t微信公众平台里面有彩蛋呦!</string>
    <string name="search_books">图书馆书籍查询</string>
    <string name="input_books_name">请输入书名</string>

</resources>