<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.renyuzhuo.ZZUJWMainActivity" >

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/zzu_term_1"
        android:orderInCategory="100"
        android:title="@string/zzu_term_1"
        app:showAsAction="never"/>
    <item
        android:id="@+id/zzu_term_2"
        android:orderInCategory="100"
        android:title="@string/zzu_term_2"
        app:showAsAction="never"/>
    <item
        android:id="@+id/zzu_term_3"
        android:orderInCategory="100"
        android:title="@string/zzu_term_3"
        app:showAsAction="never"/>
    <item
        android:id="@+id/zzu_term_4"
        android:orderInCategory="100"
        android:title="@string/zzu_term_4"
        app:showAsAction="never"/>
    <item
        android:id="@+id/zzu_term_5"
        android:orderInCategory="100"
        android:title="@string/zzu_term_5"
        app:showAsAction="never"/>
    <item
        android:id="@+id/zzu_term_6"
        android:orderInCategory="100"
        android:title="@string/zzu_term_6"
        app:showAsAction="never"/>
    <item
        android:id="@+id/zzu_term_7"
        android:orderInCategory="100"
        android:title="@string/zzu_term_7"
        app:showAsAction="never"/>
    <item
        android:id="@+id/zzu_term_8"
        android:orderInCategory="100"
        android:title="@string/zzu_term_8"
        app:showAsAction="never"/>
    

</menu>
