<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/preference_single_item"
        android:orientation="vertical" >

        <ImageView
            android:layout_marginTop="1dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/zzu_introduction"
            android:src="@drawable/zzu_pic" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/zzu_intruction_content0"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/zzu_intruction_content1"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/zzu_intruction_content2"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/zzu_intruction_content3"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/zzu_intruction_content4"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/zzu_intruction_content5"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/zzu_intruction_content6"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/zzu_intruction_content7"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/zzu_intruction_content8"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/zzu_intruction_content9"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/zzu_intruction_content10"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

</ScrollView>