<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="285sp"
            android:layout_height="wrap_content"
            android:text="@string/zzu_class"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="140sp"
            android:layout_height="30dp"
            android:text="@string/zzu_type"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="70sp"
            android:layout_height="30dp"
            android:text="@string/zzu_credit"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="70sp"
            android:layout_height="30dp"
            android:text="@string/zzu_score"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="70sp"
            android:layout_height="30dp"
            android:text="@string/zzu_gpa"
            android:textColor="#000"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#000"
        android:visibility="visible" />

    <ListView
        android:id="@+id/lv"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </ListView>

</LinearLayout>