<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/fenxibaogao"
            android:layout_width="400dip"
            android:layout_height="wrap_content"
            android:text="" />
        
        <TextView
            android:id="@+id/xqzjd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="200dip"
                android:layout_height="30dp"
                android:text="@string/zzu_class"
                android:textSize="20sp" />

            <TextView
                android:layout_width="100dip"
                android:layout_height="30dp"
                android:text="@string/zzu_type"
                android:textSize="20sp" />

            <TextView
                android:layout_width="70dip"
                android:layout_height="30dp"
                android:text="@string/zzu_credit"
                android:textSize="20sp" />

            <TextView
                android:layout_width="70dip"
                android:layout_height="30dp"
                android:text="@string/zzu_score"
                android:textSize="20sp" />

            <TextView
                android:layout_width="70dip"
                android:layout_height="30dp"
                android:text="@string/zzu_gpa"
                android:textSize="20sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </ListView>
    </LinearLayout>

</HorizontalScrollView>