<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/preference_single_item"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/historical_evolution"
            android:src="@drawable/newzzu" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/historical_evolution_content0"
            android:textColor="#000000"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/historical_evolution"
            android:src="@drawable/oldzzu" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/historical_evolution_content1"
            android:textColor="#000000"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/historical_evolution"
            android:src="@drawable/zzut" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/historical_evolution_content2"
            android:textColor="#000000"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/historical_evolution"
            android:src="@drawable/hnmnu" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/historical_evolution_content3"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

</ScrollView>